try to fix the new navbar elements so that they disappear on mobile

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ h1 {
   }
 
   .controls, .meta {
-    display: none;
+    display: none !important;
   }
 }
 
